--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ rvm:
   - 1.9.3
 before_script:
   - cp config/database.travis.yml config/database.yml
-  - psql -c 'create database trala_test;' -U postgres
+  - psql -c 'create database zombify_test;' -U postgres
   - bundle exec rake db:migrate --trace
   - bundle exec rake db:test:prepare --trace
 script:
